# grpc-logger

./: .gitignore  4  Cargo.toml  README.md  _config.yaml  build.rs  config.yaml  log_service.proto
examples/: basic.rs  basic.yaml  basic_usage.rs  client.rs  client.yaml  retry.rs  retry.yaml
src/: client.rs  config.rs  lib.rs  main.rs  server_build.rs  setup_logging.rs
src/grpc/: layer.rs  mod.rs  writer.rs
