[package]
name = "grpc_logger"
version = "0.7.0"
edition = "2021"
description = "A gRPC-based logging system with multiple output modes and retry capabilities"
license = "MIT"
repository = "https://github.com/bennekrouf/grpc-logger"
documentation = "https://docs.rs/grpc-logger"
keywords = ["logging", "grpc", "tracing"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3"

# Library configuration
[lib]
name = "grpc_logger"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "grpc_server"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "retry"
path = "examples/retry.rs"

[[example]]
name = "client"
path = "examples/client.rs"

